[package]
name = "unlocked"
version = "0.1.0"
authors = ["Kowasaki <weiyinko@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "unlocked"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]